@@ -13,7 +13,7 @@ Imports: ca, clipr, data.table, dplyr (>= 0.4.3), ggplot2, ggnetwork,
         quanteda, slam, SnowballC, stats, stringi, textshape, tidyr,
         tm, utils, wordcloud
 Suggests: intergraph, knitr, rmarkdown, qdapRegex, rgl, testthat
-Date: 2017-01-29
+Date: 2017-02-06
 License: MIT + file LICENSE
 LazyData: TRUE
 Roxygen: list(wrap = FALSE)
