@@ -1,9 +1,5 @@
 # Generated by roxygen2: do not edit by hand
 
-S3method(as_dtm,tbl_df)
-S3method(as_dtm,term_count)
-S3method(as_tdm,tbl_df)
-S3method(as_tdm,term_count)
 S3method(coverage,default)
 S3method(coverage,hierarchical_term_count)
 S3method(coverage,search_term)
@@ -94,4 +90,6 @@ export(weight)
 importFrom(data.table,":=")
 importFrom(data.table,.SD)
 importFrom(dplyr,"%>%")
+importFrom(gofastr,as_dtm)
+importFrom(gofastr,as_tdm)
 importFrom(tm,stopwords)
