@@ -1,0 +1,8 @@
+#' @importFrom gofastr as_dtm
+#' @export
+gofastr::as_dtm
+
+#' @importFrom gofastr as_tdm
+#' @export
+gofastr::as_tdm
+
